--- a/WolvenKit/WolvenKit.UI.csproj
+++ b/WolvenKit/WolvenKit.UI.csproj
@@ -115,6 +115,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ab3d.DXEngine" Version="4.2.7730-beta" />
+    <PackageReference Include="Ab3d.PowerToys" Version="9.5.7730-beta" />
     <PackageReference Include="Catel.Core" Version="5.12.12" />
     <PackageReference Include="Catel.MVVM" Version="5.12.12" />
     <PackageReference Include="Catel.Fody" Version="4.7.0-alpha0115" PrivateAssets="all" />
