--- a/WolvenKit/WolvenKit.UI.csproj
+++ b/WolvenKit/WolvenKit.UI.csproj
@@ -58,6 +58,12 @@
     <Page Remove="Resources\Styles\Custom\**" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assimp32.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assimp64.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="FFME\avcodec-58.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -84,6 +90,39 @@
     </Content>
     <Content Include="FFME\swscale-5.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\SkyboxTextures\CloudyLightRaysBack512.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\SkyboxTextures\CloudyLightRaysDown512.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\SkyboxTextures\CloudyLightRaysFront512.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\SkyboxTextures\CloudyLightRaysLeft512.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\SkyboxTextures\CloudyLightRaysRight512.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\SkyboxTextures\CloudyLightRaysUp512.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\SkyboxTextures\skyrender0001.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\SkyboxTextures\skyrender0002.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\SkyboxTextures\skyrender0003.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\SkyboxTextures\skyrender0004.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\SkyboxTextures\skyrender0005.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Resource Include="Resources\Media\Images\Icons\Files\cminimapedit.svg">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
@@ -115,6 +154,10 @@
   </ItemGroup>
 
   <ItemGroup>
+
+    <PackageReference Include="Ab3d.DXEngine.Wpf" Version="4.2.7697" />
+
+
     <PackageReference Include="Ab3d.DXEngine" Version="4.2.7730-beta" />
     <PackageReference Include="Ab3d.PowerToys" Version="9.5.7730-beta" />
     <PackageReference Include="Catel.Core" Version="5.12.12" />
@@ -885,6 +928,8 @@
     <Content Remove="C:\Users\cancerPC\.nuget\packages\microsoft.web.webview2\1.0.664.37\build\\..\runtimes\win-x64\native\WebView2Loader.dll" />
   </ItemGroup>
   <ItemGroup>
+    <None Remove="Assimp32.dll" />
+    <None Remove="Assimp64.dll" />
     <None Remove="distraction_generic.bk2" />
     <None Remove="FFME\avcodec-58.dll" />
     <None Remove="FFME\avdevice-58.dll" />
@@ -979,6 +1024,25 @@
     <None Remove="Resources\Media\Images\Icons\Files\w3simplex.svg" />
     <None Remove="Resources\Media\Images\Icons\Files\wizdef.svg" />
     <None Remove="Resources\Media\Images\Icons\Files\workspot2.svg" />
+    <None Remove="Resources\SkyboxTextures\CloudyLightRaysBack512.png" />
+    <None Remove="Resources\SkyboxTextures\CloudyLightRaysDown512.png" />
+    <None Remove="Resources\SkyboxTextures\CloudyLightRaysFront512.png" />
+    <None Remove="Resources\SkyboxTextures\CloudyLightRaysLeft512.png" />
+    <None Remove="Resources\SkyboxTextures\CloudyLightRaysRight512.png" />
+    <None Remove="Resources\SkyboxTextures\CloudyLightRaysUp512.png" />
+    <None Remove="Resources\SkyboxTextures\skyrender0001.bmp" />
+    <None Remove="Resources\SkyboxTextures\skyrender0002.bmp" />
+    <None Remove="Resources\SkyboxTextures\skyrender0003.bmp" />
+    <None Remove="Resources\SkyboxTextures\skyrender0004.bmp" />
+    <None Remove="Resources\SkyboxTextures\skyrender0005.bmp" />
     <None Remove="sample.mp4" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Ab3d.PowerToys.Assimp">
+      <HintPath>..\..\WolvenKit.Magic\WolvenKit.Magic\Ab3d.PowerToys.Assimp.dll</HintPath>
+    </Reference>
+    <Reference Include="AssimpNet">
+      <HintPath>..\..\WolvenKit.Magic\WolvenKit.Magic\AssimpNet.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
