--- a/WolvenKit/WolvenKit.UI.csproj
+++ b/WolvenKit/WolvenKit.UI.csproj
@@ -294,6 +294,7 @@
     <PackageReference Include="SkiaSharp.Views.WPF" Version="2.80.2" />
     <PackageReference Include="Syncfusion.SfGrid.WPF" Version="19.1.0.57" />
     <PackageReference Include="Syncfusion.SfSkinManager.WPF" Version="19.1.0.57" />
+    <PackageReference Include="Syncfusion.Themes.MaterialDark.WPF" Version="19.1.0.57" />
     <PackageReference Include="Syncfusion.Themes.Office2019Black.WPF" Version="19.1.0.57" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.1" />
     <PackageReference Include="LoadAssembliesOnStartup.Fody" Version="4.5.0" />
