--- a/WolvenKit/WolvenKit.UI.csproj
+++ b/WolvenKit/WolvenKit.UI.csproj
@@ -250,6 +250,7 @@
     <PackageReference Include="Catel.Core" Version="5.12.12" />
     <PackageReference Include="Catel.MVVM" Version="5.12.12" />
     <PackageReference Include="Catel.Fody" Version="4.7.0-alpha0115" PrivateAssets="all" />
+    <PackageReference Include="CatFacts.Net" Version="0.1.1" />
     <PackageReference Include="Dirkster.MWindowLib" Version="1.3.1.2" />
     <PackageReference Include="Dirkster.WSF" Version="1.2.0" />
     <PackageReference Include="DiscordRichPresence" Version="1.0.175" />
