update paths after rename

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -134,7 +134,7 @@ jobs:
       uses: actions/upload-artifact@v2.2.1
       with:
         name: artifact_console-windows
-        path: ./CP77Tools/bin/Release/net5.0-windows
+        path: ./WolvenKit.CLI/bin/Release/net5.0-windows
       
   console-osx:
     runs-on: macos-latest
@@ -171,4 +171,4 @@ jobs:
       uses: actions/upload-artifact@v2.2.1
       with:
         name: artifact_console-OSX
-        path: ./CP77Tools/bin/Release/net5.0 
+        path: ./WolvenKit.CLI/bin/Release/net5.0 
