--- a/.github/workflows/draft_console.yml
+++ b/.github/workflows/draft_console.yml
@@ -111,12 +111,12 @@ jobs:
       uses: actions/upload-artifact@v2.2.1
       with:
         name: artifact_console-windows
-        path: ./CP77Tools/bin/Release/net5.0-windows
+        path: ./WolvenKit.CLI/bin/Release/net5.0-windows
 
     - name: zip
       uses: papeloto/action-zip@v1
       with:
-        files: ./CP77Tools/bin/Release/net5.0-windows
+        files: ./WolvenKit.CLI/bin/Release/net5.0-windows
         dest: wolvenkit_console.zip
     - name: Upload Release Asset
       uses: actions/upload-release-asset@v1
@@ -164,12 +164,12 @@ jobs:
       uses: actions/upload-artifact@v2.2.1
       with:
         name: artifact_console-OSX
-        path: ./CP77Tools/bin/Release/net5.0
+        path: ./WolvenKit.CLI/bin/Release/net5.0
 
     - name: zip
       uses: papeloto/action-zip@v1
       with:
-        files: ./CP77Tools/bin/Release/net5.0
+        files: ./WolvenKit.CLI/bin/Release/net5.0
         dest: wolvenkit_console_osx.zip
     - name: Upload Release Asset
       uses: actions/upload-release-asset@v1
