--- a/WolvenKit.Common/WolvenKit.Common.csproj
+++ b/WolvenKit.Common/WolvenKit.Common.csproj
@@ -31,20 +31,20 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Catel.Analyzers" Version="1.1.0">
+    <PackageReference Include="Catel.Analyzers" Version="1.2.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Catel.Core" Version="5.12.11" />
-    <PackageReference Include="Catel.Fody" Version="4.7.0-alpha0115">
+    <PackageReference Include="Catel.Core" Version="5.12.13" />
+    <PackageReference Include="Catel.Fody" Version="4.7.0">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="CsvHelper" Version="16.0.0" />
+    <PackageReference Include="CsvHelper" Version="27.0.2" />
     <PackageReference Include="FastMember" Version="1.5.0" />
-    <PackageReference Include="FmodAudio" Version="2.0.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.8.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="protobuf-net" Version="3.0.73" />
+    <PackageReference Include="FmodAudio" Version="2.0.2" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.9.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="protobuf-net" Version="3.0.101" />
     <PackageReference Include="SharpZipLib" Version="1.3.1" />
   </ItemGroup>
 
